architect/internal/generated/deployment/deployment_parser.go
// Code generated from internal/infrastructure/antlr/grammars/Deployment.g4 by ANTLR 4.13.2. DO NOT EDIT.

package deployment // Deployment
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type DeploymentParser struct {
	*antlr.BaseParser
}

var DeploymentParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func deploymentParserInit() {
	staticData := &DeploymentParserStaticData
	staticData.LiteralNames = []string{
		"", "'deployment'", "'vendor'", "'inventory'", "'service'", "'replicas'",
		"'domain'", "'host'", "'volume'", "'backup'", "'true'", "'false'", "'{'",
		"'}'",
	}
	staticData.SymbolicNames = []string{
		"", "DEPLOYMENT", "VENDOR", "INVENTORY", "SERVICE", "REPLICAS", "DOMAIN",
		"HOST", "VOLUME", "BACKUP", "TRUE", "FALSE", "LBRACE", "RBRACE", "IDENT",
		"INT", "STRING", "LINE_COMMENT", "BLOCK_COMMENT", "WS",
	}
	staticData.RuleNames = []string{
		"program", "deploymentDecl", "deploymentBody", "vendorDecl", "inventoryDecl",
		"serviceDeploymentDecl", "serviceDeploymentBody", "replicasDecl", "domainDecl",
		"hostDecl", "volumeDecl", "backupDecl", "booleanValue",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// DeploymentParserInit initializes any static state used to implement DeploymentParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewDeploymentParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func DeploymentParserInit() {
	staticData := &DeploymentParserStaticData
	staticData.once.Do(deploymentParserInit)
}

// NewDeploymentParser produces a new parser instance for the optional input antlr.TokenStream.
func NewDeploymentParser(input antlr.TokenStream) *DeploymentParser {
	DeploymentParserInit()
	this := new(DeploymentParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &DeploymentParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "Deployment.g4"

	return this
}

// DeploymentParser tokens.
const (
	DeploymentParserEOF           = antlr.TokenEOF
	DeploymentParserDEPLOYMENT    = 1
	DeploymentParserVENDOR        = 2
	DeploymentParserINVENTORY     = 3
	DeploymentParserSERVICE       = 4
	DeploymentParserREPLICAS      = 5
	DeploymentParserDOMAIN        = 6
	DeploymentParserHOST          = 7
	DeploymentParserVOLUME        = 8
	DeploymentParserBACKUP        = 9
	DeploymentParserTRUE          = 10
	DeploymentParserFALSE         = 11
	DeploymentParserLBRACE        = 12
	DeploymentParserRBRACE        = 13
	DeploymentParserIDENT         = 14
	DeploymentParserINT           = 15
	DeploymentParserSTRING        = 16
	DeploymentParserLINE_COMMENT  = 17
	DeploymentParserBLOCK_COMMENT = 18
	DeploymentParserWS            = 19
)

// DeploymentParser rules.
const (
	DeploymentParserRULE_program               = 0
	DeploymentParserRULE_deploymentDecl        = 1
	DeploymentParserRULE_deploymentBody        = 2
	DeploymentParserRULE_vendorDecl            = 3
	DeploymentParserRULE_inventoryDecl         = 4
	DeploymentParserRULE_serviceDeploymentDecl = 5
	DeploymentParserRULE_serviceDeploymentBody = 6
	DeploymentParserRULE_replicasDecl          = 7
	DeploymentParserRULE_domainDecl            = 8
	DeploymentParserRULE_hostDecl              = 9
	DeploymentParserRULE_volumeDecl            = 10
	DeploymentParserRULE_backupDecl            = 11
	DeploymentParserRULE_booleanValue          = 12
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	DeploymentDecl() IDeploymentDeclContext
	EOF() antlr.TerminalNode

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DeploymentParserRULE_program
	return p
}

func InitEmptyProgramContext(p *ProgramContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DeploymentParserRULE_program
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = DeploymentParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) DeploymentDecl() IDeploymentDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDeploymentDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDeploymentDeclContext)
}

func (s *ProgramContext) EOF() antlr.TerminalNode {
	return s.GetToken(DeploymentParserEOF, 0)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case DeploymentVisitor:
		return t.VisitProgram(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *DeploymentParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, DeploymentParserRULE_program)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(26)
		p.DeploymentDecl()
	}
	{
		p.SetState(27)
		p.Match(DeploymentParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IDeploymentDeclContext is an interface to support dynamic dispatch.
type IDeploymentDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	DEPLOYMENT() antlr.TerminalNode
	IDENT() antlr.TerminalNode
	LBRACE() antlr.TerminalNode
	RBRACE() antlr.TerminalNode
	AllDeploymentBody() []IDeploymentBodyContext
	DeploymentBody(i int) IDeploymentBodyContext

	// IsDeploymentDeclContext differentiates from other interfaces.
	IsDeploymentDeclContext()
}

type DeploymentDeclContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDeploymentDeclContext() *DeploymentDeclContext {
	var p = new(DeploymentDeclContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DeploymentParserRULE_deploymentDecl
	return p
}

func InitEmptyDeploymentDeclContext(p *DeploymentDeclContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DeploymentParserRULE_deploymentDecl
}

func (*DeploymentDeclContext) IsDeploymentDeclContext() {}

func NewDeploymentDeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DeploymentDeclContext {
	var p = new(DeploymentDeclContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = DeploymentParserRULE_deploymentDecl

	return p
}

func (s *DeploymentDeclContext) GetParser() antlr.Parser { return s.parser }

func (s *DeploymentDeclContext) DEPLOYMENT() antlr.TerminalNode {
	return s.GetToken(DeploymentParserDEPLOYMENT, 0)
}

func (s *DeploymentDeclContext) IDENT() antlr.TerminalNode {
	return s.GetToken(DeploymentParserIDENT, 0)
}

func (s *DeploymentDeclContext) LBRACE() antlr.TerminalNode {
	return s.GetToken(DeploymentParserLBRACE, 0)
}

func (s *DeploymentDeclContext) RBRACE() antlr.TerminalNode {
	return s.GetToken(DeploymentParserRBRACE, 0)
}

func (s *DeploymentDeclContext) AllDeploymentBody() []IDeploymentBodyContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IDeploymentBodyContext); ok {
			len++
		}
	}

	tst := make([]IDeploymentBodyContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IDeploymentBodyContext); ok {
			tst[i] = t.(IDeploymentBodyContext)
			i++
		}
	}

	return tst
}

func (s *DeploymentDeclContext) DeploymentBody(i int) IDeploymentBodyContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDeploymentBodyContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDeploymentBodyContext)
}

func (s *DeploymentDeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DeploymentDeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DeploymentDeclContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case DeploymentVisitor:
		return t.VisitDeploymentDecl(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *DeploymentParser) DeploymentDecl() (localctx IDeploymentDeclContext) {
	localctx = NewDeploymentDeclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, DeploymentParserRULE_deploymentDecl)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(29)
		p.Match(DeploymentParserDEPLOYMENT)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(30)
		p.Match(DeploymentParserIDENT)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(31)
		p.Match(DeploymentParserLBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(35)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&28) != 0 {
		{
			p.SetState(32)
			p.DeploymentBody()
		}

		p.SetState(37)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(38)
		p.Match(DeploymentParserRBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IDeploymentBodyContext is an interface to support dynamic dispatch.
type IDeploymentBodyContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	VendorDecl() IVendorDeclContext
	InventoryDecl() IInventoryDeclContext
	ServiceDeploymentDecl() IServiceDeploymentDeclContext

	// IsDeploymentBodyContext differentiates from other interfaces.
	IsDeploymentBodyContext()
}

type DeploymentBodyContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDeploymentBodyContext() *DeploymentBodyContext {
	var p = new(DeploymentBodyContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DeploymentParserRULE_deploymentBody
	return p
}

func InitEmptyDeploymentBodyContext(p *DeploymentBodyContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DeploymentParserRULE_deploymentBody
}

func (*DeploymentBodyContext) IsDeploymentBodyContext() {}

func NewDeploymentBodyContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DeploymentBodyContext {
	var p = new(DeploymentBodyContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = DeploymentParserRULE_deploymentBody

	return p
}

func (s *DeploymentBodyContext) GetParser() antlr.Parser { return s.parser }

func (s *DeploymentBodyContext) VendorDecl() IVendorDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IVendorDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IVendorDeclContext)
}

func (s *DeploymentBodyContext) InventoryDecl() IInventoryDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IInventoryDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IInventoryDeclContext)
}

func (s *DeploymentBodyContext) ServiceDeploymentDecl() IServiceDeploymentDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IServiceDeploymentDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IServiceDeploymentDeclContext)
}

func (s *DeploymentBodyContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DeploymentBodyContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DeploymentBodyContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case DeploymentVisitor:
		return t.VisitDeploymentBody(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *DeploymentParser) DeploymentBody() (localctx IDeploymentBodyContext) {
	localctx = NewDeploymentBodyContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, DeploymentParserRULE_deploymentBody)
	p.SetState(43)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case DeploymentParserVENDOR:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(40)
			p.VendorDecl()
		}

	case DeploymentParserINVENTORY:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(41)
			p.InventoryDecl()
		}

	case DeploymentParserSERVICE:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(42)
			p.ServiceDeploymentDecl()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IVendorDeclContext is an interface to support dynamic dispatch.
type IVendorDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	VENDOR() antlr.TerminalNode
	IDENT() antlr.TerminalNode

	// IsVendorDeclContext differentiates from other interfaces.
	IsVendorDeclContext()
}

type VendorDeclContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyVendorDeclContext() *VendorDeclContext {
	var p = new(VendorDeclContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DeploymentParserRULE_vendorDecl
	return p
}

func InitEmptyVendorDeclContext(p *VendorDeclContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DeploymentParserRULE_vendorDecl
}

func (*VendorDeclContext) IsVendorDeclContext() {}

func NewVendorDeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *VendorDeclContext {
	var p = new(VendorDeclContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = DeploymentParserRULE_vendorDecl

	return p
}

func (s *VendorDeclContext) GetParser() antlr.Parser { return s.parser }

func (s *VendorDeclContext) VENDOR() antlr.TerminalNode {
	return s.GetToken(DeploymentParserVENDOR, 0)
}

func (s *VendorDeclContext) IDENT() antlr.TerminalNode {
	return s.GetToken(DeploymentParserIDENT, 0)
}

func (s *VendorDeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *VendorDeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *VendorDeclContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case DeploymentVisitor:
		return t.VisitVendorDecl(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *DeploymentParser) VendorDecl() (localctx IVendorDeclContext) {
	localctx = NewVendorDeclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, DeploymentParserRULE_vendorDecl)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(45)
		p.Match(DeploymentParserVENDOR)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(46)
		p.Match(DeploymentParserIDENT)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IInventoryDeclContext is an interface to support dynamic dispatch.
type IInventoryDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	INVENTORY() antlr.TerminalNode
	STRING() antlr.TerminalNode

	// IsInventoryDeclContext differentiates from other interfaces.
	IsInventoryDeclContext()
}

type InventoryDeclContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyInventoryDeclContext() *InventoryDeclContext {
	var p = new(InventoryDeclContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DeploymentParserRULE_inventoryDecl
	return p
}

func InitEmptyInventoryDeclContext(p *InventoryDeclContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DeploymentParserRULE_inventoryDecl
}

func (*InventoryDeclContext) IsInventoryDeclContext() {}

func NewInventoryDeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *InventoryDeclContext {
	var p = new(InventoryDeclContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = DeploymentParserRULE_inventoryDecl

	return p
}

func (s *InventoryDeclContext) GetParser() antlr.Parser { return s.parser }

func (s *InventoryDeclContext) INVENTORY() antlr.TerminalNode {
	return s.GetToken(DeploymentParserINVENTORY, 0)
}

func (s *InventoryDeclContext) STRING() antlr.TerminalNode {
	return s.GetToken(DeploymentParserSTRING, 0)
}

func (s *InventoryDeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *InventoryDeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *InventoryDeclContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case DeploymentVisitor:
		return t.VisitInventoryDecl(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *DeploymentParser) InventoryDecl() (localctx IInventoryDeclContext) {
	localctx = NewInventoryDeclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, DeploymentParserRULE_inventoryDecl)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(48)
		p.Match(DeploymentParserINVENTORY)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(49)
		p.Match(DeploymentParserSTRING)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IServiceDeploymentDeclContext is an interface to support dynamic dispatch.
type IServiceDeploymentDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	SERVICE() antlr.TerminalNode
	IDENT() antlr.TerminalNode
	LBRACE() antlr.TerminalNode
	RBRACE() antlr.TerminalNode
	AllServiceDeploymentBody() []IServiceDeploymentBodyContext
	ServiceDeploymentBody(i int) IServiceDeploymentBodyContext

	// IsServiceDeploymentDeclContext differentiates from other interfaces.
	IsServiceDeploymentDeclContext()
}

type ServiceDeploymentDeclContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyServiceDeploymentDeclContext() *ServiceDeploymentDeclContext {
	var p = new(ServiceDeploymentDeclContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DeploymentParserRULE_serviceDeploymentDecl
	return p
}

func InitEmptyServiceDeploymentDeclContext(p *ServiceDeploymentDeclContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DeploymentParserRULE_serviceDeploymentDecl
}

func (*ServiceDeploymentDeclContext) IsServiceDeploymentDeclContext() {}

func NewServiceDeploymentDeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ServiceDeploymentDeclContext {
	var p = new(ServiceDeploymentDeclContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = DeploymentParserRULE_serviceDeploymentDecl

	return p
}

func (s *ServiceDeploymentDeclContext) GetParser() antlr.Parser { return s.parser }

func (s *ServiceDeploymentDeclContext) SERVICE() antlr.TerminalNode {
	return s.GetToken(DeploymentParserSERVICE, 0)
}

func (s *ServiceDeploymentDeclContext) IDENT() antlr.TerminalNode {
	return s.GetToken(DeploymentParserIDENT, 0)
}

func (s *ServiceDeploymentDeclContext) LBRACE() antlr.TerminalNode {
	return s.GetToken(DeploymentParserLBRACE, 0)
}

func (s *ServiceDeploymentDeclContext) RBRACE() antlr.TerminalNode {
	return s.GetToken(DeploymentParserRBRACE, 0)
}

func (s *ServiceDeploymentDeclContext) AllServiceDeploymentBody() []IServiceDeploymentBodyContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IServiceDeploymentBodyContext); ok {
			len++
		}
	}

	tst := make([]IServiceDeploymentBodyContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IServiceDeploymentBodyContext); ok {
			tst[i] = t.(IServiceDeploymentBodyContext)
			i++
		}
	}

	return tst
}

func (s *ServiceDeploymentDeclContext) ServiceDeploymentBody(i int) IServiceDeploymentBodyContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IServiceDeploymentBodyContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IServiceDeploymentBodyContext)
}

func (s *ServiceDeploymentDeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ServiceDeploymentDeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ServiceDeploymentDeclContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case DeploymentVisitor:
		return t.VisitServiceDeploymentDecl(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *DeploymentParser) ServiceDeploymentDecl() (localctx IServiceDeploymentDeclContext) {
	localctx = NewServiceDeploymentDeclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, DeploymentParserRULE_serviceDeploymentDecl)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(51)
		p.Match(DeploymentParserSERVICE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(52)
		p.Match(DeploymentParserIDENT)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(53)
		p.Match(DeploymentParserLBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(57)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&992) != 0 {
		{
			p.SetState(54)
			p.ServiceDeploymentBody()
		}

		p.SetState(59)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(60)
		p.Match(DeploymentParserRBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IServiceDeploymentBodyContext is an interface to support dynamic dispatch.
type IServiceDeploymentBodyContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ReplicasDecl() IReplicasDeclContext
	DomainDecl() IDomainDeclContext
	HostDecl() IHostDeclContext
	VolumeDecl() IVolumeDeclContext
	BackupDecl() IBackupDeclContext

	// IsServiceDeploymentBodyContext differentiates from other interfaces.
	IsServiceDeploymentBodyContext()
}

type ServiceDeploymentBodyContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyServiceDeploymentBodyContext() *ServiceDeploymentBodyContext {
	var p = new(ServiceDeploymentBodyContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DeploymentParserRULE_serviceDeploymentBody
	return p
}

func InitEmptyServiceDeploymentBodyContext(p *ServiceDeploymentBodyContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DeploymentParserRULE_serviceDeploymentBody
}

func (*ServiceDeploymentBodyContext) IsServiceDeploymentBodyContext() {}

func NewServiceDeploymentBodyContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ServiceDeploymentBodyContext {
	var p = new(ServiceDeploymentBodyContext)
